UI-design/css/profile-page.css
body {
    font-family: Vazir, serif;
    height: 100%;
}

.navbar {
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);

    height: 60px;
    padding: 0px;
}

.navbar:hover {
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
}

.navbar .navbar-nav {
    padding: 0px;
}

.navbar .navbar-brand {
    padding: 0px;
}

#logo {
    height: 60px;
}

.navbar .nav-item .nav-link{
    color: #222;
}

footer {
    height: 65px;
    background: #444;
    position: relative;
}

footer div {
    color: #999;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

main {
    min-height: calc(100vh - 60px - 60px);
}

#blue-section {
    background: rgb(195, 237, 241);
    height: 17vh;
}

#description{
    margin-top: 0px;
    color: #555;
    text-align: justify;
    line-height: 2;

}

#profile-picture .img-thumbnail {
    padding: 0.75rem;
    border-radius:1.25rem;
    transform: translateY(-50%);
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
}

#username {
    margin-top: 3vh;
    color: #444;
    font-size: 40px;
    font-weight: bold;
}

#title {
    color: #888;
    font-size: 18px;
}

#title_bar {
    height: 17vh;
}


#skill_row {
    height: 6vh;
}

#skills {
    width: 10%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#skills p:first-child {
    font-weight: bold;
    color: #333;
    font-size: 25px;
    flex-shrink: 0;
}


#skill_container {
    /*width: 30%;*/
    margin-right: 0.5vh;
    border-radius:0.2rem;
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
}

#skill_btn {
    background-color: rgb(64,151,163);
    color:#fff;
    font-size: 15px;
    margin: 0.2rem;
    border-radius:0.2rem;
}

.dropdown {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0.2rem;
    box-shadow: 0 1px 4px rgba(125, 125, 125, 0.3);
}

#dropdownMenu1 {
    flex-shrink: 0;
    color: #444;
}



/*.under*/
/*{*/
    /*position:absolute;*/
    /*right:0px;*/
    /*top:0px;*/
    /*z-index:-1;*/
/*}*/
/*.over*/
/*{*/
    /*position:absolute;*/
    /*right:40px;*/
    /*top:10px;*/
    /*z-index:-1;*/
/*}*/

